k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anrsi-backend
  namespace: anrsi
  labels:
    app: anrsi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anrsi-backend
  template:
    metadata:
      labels:
        app: anrsi-backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: anrsi-backend
          image: mohamdikhlil/anrsi-backend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080  # Application port
            - containerPort: 8081  # Management port
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080  # Use management port
            initialDelaySeconds: 10
            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8081  # Use management port
#            initialDelaySeconds: 10
#            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: anrsi-backend
  name: anrsi-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: anrsi-backend

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anrsi-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: 999m
spec:
  tls:
    - hosts:
        - api.anrsi.dsohost.com
      secretName: anrsi-backend-ssl-cert-production
  ingressClassName: nginx
  rules:
    - host: api.anrsi.dsohost.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anrsi-backend
                port:
                  number: 80
